# mtgfetch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
completions/: mtgfetch.bash
images/ascii/: black.txt  black_colored.txt  black_small.txt  black_small_colored.txt  blue.txt  blue_colored.txt  blue_small.txt  blue_small_colored.txt  colorless.txt  colorless_colored.txt  colorless_small.txt  colorless_small_colored.txt  green.txt  green_colored.txt  green_small.txt  green_small_colored.txt  red.txt  red_colored.txt  red_small.txt  red_small_colored.txt  white.txt  white_colored.txt  white_small.txt  white_small_colored.txt
include/: card_information.h  configuration.h  mana_symbol.h
presets/: all_modules.yaml  all_options.json  config.yaml  default_config.yaml
src/: card_information.cpp  configuration.cpp  main.cpp  mana_symbol.cpp
